Applying style to diagrams

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
 format:
   html:
     theme:
-      - cosmo
-      - brand
-    css: styles.css
+      dark: [cosmo, styles.css]
+      # - brand
+    # css: styles.css
     toc: true
