--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,10 @@ dependencies = [
     "fsspec[http,libarchive,tqdm]>=2025.9.0",
     "invoke>=2.2.0",
     "jupyter>=1.1.1",
-    "litellm[proxy]>=1.63.11",
+    "litellm[proxy]>=1.63.7",
     "marimo>=0.15.5",
     "ollama>=0.5.4",
+    "openai==1.61.0",
     "pandas>=2.3.0",
     "pdbpp>=0.11.7",
     "requests>=2.32.4",
