--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,15 @@ dependencies = [
     "fsspec[http,libarchive,tqdm]>=2025.9.0",
     "invoke>=2.2.0",
     "jupyter>=1.1.1",
+    "jupyter-cache>=1.0.1",
     "litellm[proxy]>=1.63.7",
     # "marimo>=0.15.5",
     # "ollama>=0.5.4",
     # "openai==1.61.0",
     # "pandas>=2.3.0",
+    "ollama>=0.5.4",
     "pdbpp>=0.11.7",
+    "prisma>=0.15.0",
     "requests>=2.32.4",
     "rich>=14.1.0",
     # "seaborn>=0.13.2",
@@ -24,4 +27,9 @@ dependencies = [
 [tool.uv.workspace]
 members = [
     "demo/demo-cli",
+]
+
+[dependency-groups]
+dev = [
+    "invoke>=2.2.0",
 ]
