--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "pdbpp>=0.11.7",
     "prisma>=0.15.0",
     "pydantic-settings>=2.10.1",
+    "pydot>=4.0.1",
+    "pyfzf>=0.3.1",
     "requests>=2.32.4",
     "rich>=14.1.0",
     # "seaborn>=0.13.2",
