Add Drawings to img, going through corrections, exts for icons, LG module

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,6 +47,8 @@ repos:
     -   id: end-of-file-fixer
         exclude_types:
           - svg
+          - css
+          - yaml
     -   id: debug-statements
     # TODO: Fix this
     # -   id: name-tests-test
