--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.12.15",
+    "cheap-repr>=0.5.2",
     "datasets>=4.1.1",
     "diskcache>=5.6.3",
     "fsspec[http,libarchive,tqdm]>=2025.9.0",
