--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,6 +49,8 @@ repos:
           - svg
           - css
           - yaml
+          - javascript
+        
     -   id: debug-statements
     # TODO: Fix this
     # -   id: name-tests-test
