--- a/_brand.yml
+++ b/_brand.yml
@@ -1,13 +1,13 @@
-# color:
-#   palette:
+color:
+  palette: {}
 #     dark-grey: "#222222"
 #     blue: "#ddeaf1"
 #   background: blue
 #   foreground: dark-grey
 #   primary: black
 
-logo: 
-  medium: ./img/logo.svg
+# logo: 
+#   medium: ./img/logo.svg
 
 # typography:
 #   fonts:
